# qwerty

./: .gitmodules  3lab10.c  README.md  file1.txt  sort.c
lab9/: README.md
pract1/: main.c  samolet.c
pract2/: CMakeLists.txt  Makefile
pract2/include/: samolet.h
pract3/: Roguelike.c
pract4/: bam.csv  file123.c
pract5/: task1.c
pract6/: README.md  potok.c  potok3.c  potok5.c  sleepsort.c
pract7/: asfd.c  test.c
pract8/src/: main.cpp  paint_core.cpp
src/: main.cpp  paint_core.cpp
